@@ -1,3 +1,9 @@
+2002-06-24  Don Porter  <dgp@users.sourceforge.net>
+
+	* library/tcltest/tcltest.tcl:	Corrected suppression of -verbose skip
+	* tests/tcltest.test:		and start by [test -output].  Also
+	corrected test suite errors exposed by corrected code.  [Bug 564656]
+
 2002-06-25  Reinhard Max  <max@suse.de>
 
 	* unix/tcl.m4:       New macro SC_CONFIG_MANPAGES.
